# MeteoStation_v2

./: README.md
DOC/: Diagram.drawio
DOC/Diagrams/: ~$Diagram.drawio.bkp  ~$Diagram.drawio.dtmp
DOC/gcc-STM32_AN2594_EEPROM_emulation-master/: LICENSE  README.md
DOC/gcc-STM32_AN2594_EEPROM_emulation-master/16bit virtual variables/: eeprom.c  eeprom.h  profile.c  profile.h
DOC/gcc-STM32_AN2594_EEPROM_emulation-master/2Kb BLOB data/: eeprom_page.c  eeprom_page.h  flash.c  flash.h  program.c  program.h
ProjectClion/: CMakeLists.txt  compiler.cmake  toolchain.cmake
ProjectClion/AM2305/: am2305_cfg.h  am2305_drv.c  am2305_drv.h  am2305_drv_cfg.h
ProjectClion/BMP2-Sensor-API-master/: bmp2.c  bmp2.h  bmp2_defs.h
ProjectClion/CMakeScripts/STM32L151CB/: toolchain.cmake
ProjectClion/CMakeScripts/STM32L4/: CMakeLists.txt  toolchain.cmake
ProjectClion/CheckSum/: checksum.c  checksum.h  checksum_cfg.h
ProjectClion/Circular_Buffer/Latest/: circ_buffer.c  circ_buffer.h
ProjectClion/Config/: STM32L151XB_FLASH.ld  STM32L476RGTx_FLASH.ld  stm32f4xx_flash.ld  stm32l1xx_flash.icf  stm32l1xx_ram.icf
ProjectClion/DS18B20/: ds18b20.c  ds18b20.h  ds18b20_cfg.h
ProjectClion/EEPROM_Emulation/: eeprom.c  eeprom.h
ProjectClion/EEPROM_Emulation_new/: memory_types.h
ProjectClion/EEPROM_Emulation_new/Implementation/Latest/: eeprom_emulation.c  eeprom_emulation_cfg.h  eeprom_emulation_cfg.h.tmpl
ProjectClion/EEPROM_Emulation_new/Interface/: eeprom_emulation.h
ProjectClion/OneWire/: OneWire.c  OneWire.h  oneWire.c  oneWire.h  oneWire_cfg.h
ProjectClion/RecordManager/: record_manager.c  record_manager.h  record_manager_cfg.h
ProjectClion/SX1276/inc/: platform.h
ProjectClion/SX1276/src/: sx1276-FskMisc.c  sx1276-LoRa.c  sx1276.c
ProjectClion/StartUp/: startup_stm32l151xb.s
ProjectClion/TERMINAL/: task_terminal.c  task_terminal.h  task_terminal_cfg.h  term-srv.c
ProjectClion/TF02_PRO/: tf02Pro_drv.c  tf02Pro_drv.h  tf02Pro_drv_cfg.h
ProjectClion/TIME/: time_drv.c  time_drv.h  time_drv_cfg.h
ProjectClion/USART_Driver/: usart_drv.c  usart_drv.h  usart_drv_cfg.h
ProjectClion/Users/inc/: FreeRTOSConfig.h  Init.h  Init_cfg.h  compiler.h  ftoa.h  general.h  general_macros.h  general_types.h  platform.h  rtwtypes.h  stm32l1xx_conf.h  stm32l4xx_hal_conf.h  task_GSM.h  task_GSM_cfg.h  task_master.h  task_master_cfg.h  task_mqtt.h  task_mqtt_cfg.h  task_read_sensors.h  task_read_sensors_cfg.h  task_test_EE.h  task_test_flash.h  tasks_sensors_read.h
ProjectClion/Users/incStm32F4/: stm32f4xx_conf.h
ProjectClion/Users/src/: Init.c  Tasks.c  ftoa.c  main.c  stm32l4xx_it.c  system_stm32l1xx.c  task_GSM.c  task_master.c  task_mqtt.c  task_read_sensors.c  task_test_EE.c  task_test_flash.c  tasks_sensors_read.c
ProjectClion/Users/srcStm32F4/: InitStm32F4.c  main.c  system_stm32f4xx.c
ProjectClion/W25Q_FLASH/: W25Q_drv.c  W25Q_drv.h  W25Q_drv_cfg.h
ProjectClion/coreMQTT/source/: core_mqtt.c
SCH/: Diagram.drawio  Frame.drawio  Meteo Station v2-cache.lib  Meteo Station v2-rescue.lib  Meteo Station v2.kicad_pcb  Meteo Station v2.net  Meteo Station v2.pro  Meteo Station v2.sch  Meteo Station v2.sch-bak  Modules.lib  RAKwireless.lib  Smart_module.lib  sym-lib-table
SCH/Meteo Station v2.pretty/: arduinoMega2560.kicad_mod
scripts/: get_data.py
